--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,7 @@
-Middle
+<h2>Upcoming Fixtures</h2>
+<div>
+    <% fixtures.forEach(fixture => { %>
+        <img height="150" width="100" src="<%= fixture.teamSheetImagePath %>">
+
+    <% })%>
+</div>
