--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
         <ul>
             <li><a href="/teams">Teams</a></li>
             <li><a href="/teams/new">Add Team</a></li>
+            <li><a href="/fixtures">Fixtures</a></li>
+            <li><a href="/fixtures/new">Add Fixture</a></li>
         </ul>
     </nav>
 </header>
